--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -17,6 +17,7 @@
     "expo-build-properties": "~0.13.1",
     "expo-modules-autolinking": "~2.0.0",
     "expo-status-bar": "~2.0.0",
+    "firebase": "^11.0.2",
     "react": "^18.3.1",
     "react-google-button": "^0.8.0",
     "react-native": "^0.76.2",
