--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-firebase/auth": "17.4.0",
     "@react-navigation/native": "^7.0.4",
     "@react-navigation/native-stack": "^7.1.1",
+    "axios": "^1.7.9",
     "expo": "~52.0.10",
     "expo-build-properties": "~0.13.1",
     "expo-modules-autolinking": "~2.0.0",
