--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-firebase/app": "17.4.0",
     "@react-native-firebase/auth": "17.4.0",
     "@react-navigation/native": "^7.0.4",
@@ -19,6 +20,7 @@
     "expo-modules-autolinking": "~2.0.0",
     "expo-status-bar": "~2.0.0",
     "firebase": "^11.0.2",
+    "install": "^0.13.0",
     "react": "^18.3.1",
     "react-google-button": "^0.8.0",
     "react-native": "^0.76.2",
