--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@react-native-community/cli": "^15.1.3"
   },
   "private": true
 }
